--- a/HTML1/HTML1-CAC-MOVIES/templates/HTML2/HTML2-LIMPIO/index.html
+++ b/HTML1/HTML1-CAC-MOVIES/templates/HTML2/HTML2-LIMPIO/index.html
@@ -13,8 +13,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="./templates/tabla.html">Tabla</a>
-            <a href="./templates/galeria.html">Galeria</a>
-            <a href="./templates/listas.html">Listas</a>
+            <a href="templates/galeria.html">Galeria</a>
             <a href="http://www.google.com" target="_blank">Google</a>
         </nav>
 
