--- a/HTML3/Resuelto por mi/templates/tabla.html
+++ b/HTML3/Resuelto por mi/templates/tabla.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, Multimedia, audio, video, curso, mapa">
+    <meta name="description" content="Incorporacion de udio, video, mapa en un archivo HTML">
     <link rel="shortcut icon" href="../img/codoAcodo.ico" type="image/x-icon">
     <title>Tabla</title>
 </head>
@@ -23,8 +24,76 @@
     <!-- Contenido -->
     <main>
         <h1>Tabla</h1>
-    </main>
+        
+        <section>
+            <h2>Audio y Video</h2> 
+            
+            <!-- Audio -->
+            <div>
+                <audio src="../audio/typical-trap-loop-2b-130751.mp3" controls></audio>
+            </div>
 
+            <!-- Video -->
+            <div>
+                <video src="../video/mov_bbb.mp4" controls height="400px" ></video>
+            </div>
+
+        </section>
+            
+            <div>
+                <!-- Google Maps -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7811.050907267368!2d-58.38200259674624!3d-34.600559952513095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac8c4b72a63%3A0x9463be180b4dd198!2sTucum%C3%A1n%201000%2C%20C1049AAT%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1710797443899!5m2!1ses-419!2sar" width="600" height="450" style="border:0; border-radius: 15%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            
+            <div>
+                <!-- YouTube -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1npuHskJ6p0?si=pXAUxgb-vGciyubB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        <section>
+                <h4>Tabla Basica</h4>
+                
+                <table border="1">
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>DNI</th>
+                    </tr>
+                    <!-- 1er Fila -->
+                    <tr>
+                        <td>Pedro</td>
+                        <td>suarez</td>
+                        <td>123568</td>
+                    </tr>
+                    <!-- 1er Fila -->
+                    <tr>
+                        <td>Luis</td>
+                        <td>Sanchez</td>
+                        <td>987456321</td>
+                    </tr>
+
+
+                </table>
+        </section>
+
+        <section>
+            <!-- rowspan y colspan -->
+            <table>
+                <tr>
+                    <th>Producto</th>
+                    <th>Descripcion</th>
+                    <th>Variante</th>
+                </tr>
+    
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+            
+        </section>
+
+    </main>
     <!-- Footer -->
     <footer></footer>
 
