--- a/HTML3/Resuelto por mi/templates/tabla.html
+++ b/HTML3/Resuelto por mi/templates/tabla.html
@@ -73,22 +73,71 @@
 
 
                 </table>
-        </section>
+
+                <br><br><br><br>
+
+                <table border="1">
+                    <!-- tr table raw-->
+                    <!-- td table data -->
+                    <!-- th table header -->
+                    
+                    <tr> 
+                        <th>calle</th>
+                        <th>numero</th>
+                        <th>depto</th>
+                        <th>localidad</th>
+                    </tr>
+
+                    <tr>
+                        <td>azcuenaga</td>
+                        <td>487</td>
+                        <td>3 C</td>
+                        <td>caba</td>
+                    </tr>
+
+                    <tr>
+                        <td>la paz</td>
+                        <td>1478</td>
+                        <td>15 c</td>
+                        <td>san martin</td>
+                    </tr>
+
+                </table>
+        <br><br><br><br>
+    
+    </section>
 
         <section>
             <!-- rowspan y colspan -->
-            <table>
+            <table border="2">
                 <tr>
-                    <th>Producto</th>
-                    <th>Descripcion</th>
-                    <th>Variante</th>
+                    <th>Zona</th>
+                    <th colspan="2">Partido</th>                    
                 </tr>
-    
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td rowspan="3">zona sur</td>
+                    <td>Avellande</td>
+                    <td>lanus</td>
                 </tr>
+                <tr>
+                    <td colspan="2">banfield</td>
+                </tr>
+                <tr>
+                    <td>quilmes</td>
+                    <td>beraza</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">zona oeste</td>
+                    <td>moron</td>
+                    <td>merlo</td>
+                </tr>
+                <tr>
+                    <td>moreno</td>
+                    <td>haedo</td>
+                </tr>
+                
+                
+                
             </table>
             
         </section>
